--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="bar.css">
+
+    <!-- <link rel="stylesheet" href="bar.css"> -->
 </head>
 <body>
         <nav class="navbar">
@@ -14,13 +15,13 @@
                     <ul>
                         <li><a class="visible" href="index.html"><b>Accueil</b></a></li>
                         <li><a href="home.html"><b>Menu</b></a></li>
-                        <li><a href="service.html"><b>About</b></a></li>
-                        <li><a href="about.html"><b>Book Table</b></a></li>
+                        <li><a href="about.html"><b>About</b></a></li>
+                        
                         <li><a href="contact.html"><b>Contact</b></a></li>
                     
                         <li>
                             <a href="https://www.facebook.com" target="_blank">
-                                <img src="facebook.png" alt="Facebook" width="25px">
+                                <img src="facebook.svg" alt="Facebook" width="25px">
                             </a>
                         </li>
                         <li>
