icon social network + font Poopins

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
 
     <!-- <link rel="stylesheet" href="bar.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
         <nav class="navbar">
@@ -20,19 +22,21 @@
                         <li><a href="contact.html"><b>Contact</b></a></li>
                     
                         <li>
-                            <a href="https://www.facebook.com" target="_blank">
-                                <img src="facebook.svg" alt="Facebook" width="25px">
+                            <a href="https://facebook.com" target="_blank">
+                                <i class="fab fa-facebook-f"></i>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.instagram.com" target="_blank">
-                                <img src="instagram.png" alt="Instagram" width="25px">
+                            <a href="https://instagram.com" target="_blank">
+                                <i class="fab fa-instagram"></i>
                             </a>
+
                         </li>
                         <li>
-                            <a href="https://www.X.com" target="_blank">
-                                <img src="twitter.png" alt="X" width="25px">
-                            </a>
+                                <a href="https://twitter.com" target="_blank">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+
                         </li>
                     </ul>
                 </div>
@@ -51,14 +55,7 @@
                 navLinks.classList.toggle("active");
             });
             </script>
-            <div class="page1">
-                <div class="page1-text">Car Rental</div>
-                <a href="https://wa.me/212621299173" target="_blank" class="whatsapp-button">
-                    Contacter sur WhatsApp
-                </a>
 
-
-            </div>
 
 
 
