dropdown sur un ligne + image background

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_nav.css">
+    <link rel="stylesheet" href="styles.css">
     
 
     <!-- <link rel="stylesheet" href="bar.css"> -->
@@ -13,8 +14,8 @@
     href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
     rel="stylesheet"
     />
-</head>
-<body>
+
+
     <!--=============== HEADER ===============-->
         <header class="header">
             <nav class="nav container">
@@ -120,8 +121,20 @@
             </nav>
             <div>
             </div>
-        <!--=============== MAIN JS ===============-->
-        <script src="js.js"></script>
+    </header>
+</head>
+<body>
+    <!--=============== MAIN JS ===============-->
+    <script src="js.js"></script>
+
+    <section class="page1">
+        <div class="page1-text">
+            Car Rental
+        </div>
+        <a href="https://wa.me/212621299173" target="_blank"class="whatsapp-button">
+            Contacter sur WhatsApp
+        </a>
+    </section>
 
 
 
