dropdown sur un ligne + image background

--- a/index.html
+++ b/index.html
@@ -127,14 +127,16 @@
     <!--=============== MAIN JS ===============-->
     <script src="js.js"></script>
 
-    <section class="page1">
-        <div class="page1-text">
-            Car Rental
-        </div>
-        <a href="https://wa.me/212621299173" target="_blank"class="whatsapp-button">
-            Contacter sur WhatsApp
-        </a>
-    </section>
+<section class="page1">
+  <div class="page1-text">
+    Car Rental
+  </div>
+  <a href="https://wa.me/212621299173" target="_blank" class="whatsapp-button">
+    <i class="ri-whatsapp-fill whatsapp_icon"></i>
+    <span class="whatsapp-text">Contacter sur WhatsApp</span>
+  </a>
+</section>
+
 
 
 
