--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
                             </li>
                         </ul>
 
-                    <li><a href="#" class="nav__link">Voitures</a></li>
-
                     <li><a href="#" class="nav__link">Tarifs</a></li>
 
                     <li><a href="#" class="nav__link">Réservation</a></li>
@@ -133,7 +131,7 @@
   </div>
   <a href="https://wa.me/212621299173" target="_blank" class="whatsapp-button">
     <i class="ri-whatsapp-fill whatsapp_icon"></i>
-    <span class="whatsapp-text">Contacter sur WhatsApp</span>
+    Contacter sur WhatsApp
   </a>
 </section>
 
